Fix document search chat summaries and package sharing